--- a/daily/style6.css
+++ b/daily/style6.css
@@ -1,3 +1,6 @@
+body{
+    background-color: azure;
+}
 .nav{
     padding: 10px;
     background-color: black;
@@ -15,8 +18,6 @@
 .nav-li ul li a{
     text-decoration: none;
     color: white;
-    position: relative;
-    top: 30px;
 }
 
 .nav-li ul li a:hover{
@@ -30,4 +31,16 @@
 
 #navbar div{
     display: inline-block;
+    position: relative;
+    left: 50px;
+}
+
+.nav-li{
+    position: relative;
+    top: -41px;
+    margin-left: 500px;
+}
+
+#navbar{
+    margin-top: 15px;
 }
