--- a/portfolio.html/main.css
+++ b/portfolio.html/main.css
@@ -240,7 +240,7 @@ h6 {
   margin: 0;
   width: 140px;
   position: absolute; /* or fixed */
-  top: 50%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -306,6 +306,24 @@ h6 {
 .navmenu li:hover>a span {
   display: block;
 }
+
+/* header */
+.tag-cloud {
+  display: inline-block;
+  padding: 8px 20px;
+  font-family: Arial;
+  border-radius: 25px;
+  background-color: var(--nav-dropdown-background-color);
+  margin-top: 8px;
+  text-align: center; 
+  transition: width 0.5s ease;
+}
+
+.tag-cloud > li:hover{
+  background-color: #0563bb;
+}
+
+
 
 /*--------------------------------------------------------------
 # Global Footer
@@ -722,6 +740,16 @@ section,
 # Skills Section
 --------------------------------------------------------------*/
 
+.containers {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 10px;
+}
+.containers > div {
+  padding: 50px;
+  text-align: left;
+}
+
 .skills-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -920,7 +948,7 @@ section,
 }
 
 .services .service-item.item-cyan i {
-  color: #0dcaf0;
+  color: #0563bb;
 }
 
 .services .service-item.item-cyan:hover .icon i {
@@ -928,21 +956,13 @@ section,
 }
 
 .services .service-item.item-cyan:hover .icon path {
-  fill: #0dcaf0;
+  fill: #0563bb;
 }
 
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
-.tag-cloud {
-  display: inline-block;
-  color: white;
-  padding: 8px 20px;
-  font-family: Arial;
-  border-radius: 25px;
-  background-color: #a4cef5;
-  margin-top: 8px;
-}
+
 
 .tag-cloud-s {
   display: inline-block;
@@ -1303,3 +1323,55 @@ section,
   top: 15px;
   right: 35px;
   } */
+
+
+
+  .project-container{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+.project-box{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 30%;
+    height: 250px;
+    background: var(--color-white);
+    border-radius: 20px;
+    box-shadow: 1px 8px 10px 2px var(--contrast-color);
+    overflow: hidden;
+    border-style: double;
+}
+.project-box>i{
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.project-box label{
+    font-size: 15px;
+}
+.project-box::after, .contact-info::after{
+    content: "";
+    position: absolute;
+    bottom: -100%;
+    background: var(--accent-color);
+    width: 100%;
+    height: 100%;
+    transition: .4s;
+    z-index: 1;
+    border-style: solid;
+}
+.project-box:hover.project-box::after,
+.contact-info:hover.contact-info::after{
+    bottom: 0;
+}
+.project-box:hover.project-box i,
+.project-box:hover.project-box>h3,
+.project-box:hover.project-box>label{
+    color: var(--color-white);
+    z-index: 2;
+}
